<resources>
    <string name="app_name">Airbnb</string>
    <string name="where_to_go">어디로 여행하세요?</string>
    <string name="near_trip_string">근처의 인기 여행지</string>
    <string name="where_do_you_want_to_travel">어디로 여행하세요?</string>
    <string name="my_reservation">내 예약</string>
    <string name="wish_list">위시리스트</string>
    <string name="search">검색</string>
    <string name="lookup_close_place">가까운 여행지 둘러보기</string>
    <string name="drive_time">차로 시간 거리</string>
    <string name="settings">Settings</string>
    <string name="permission_rationale">Permission was denied, but is needed for core function...</string>
    <string name="ok">ok</string>
    <string name="from_time">분 거리</string>
    <string name="skip_string">건너뛰기</string>
    <string name="test1">1000</string>
    <string name="min_price">최저 요금</string>
    <string name="max_price">최고 요금</string>
    <string name="adult">성인</string>
    <string name="over_13years_old">만 13세 이상</string>
    <string name="kids">어린이</string>
    <string name="under_12year_old">만 2~12세</string>
    <string name="baby">유아</string>
    <string name="under_2year_old">만 2세 미만</string>
    <string name="initial_value">0</string>
    <string name="close">Close</string>
    <string name="like_button">Like Button</string>
    <string name="accommodation_image">Accommodation Image</string>
    <string name="room_count">%d개의 숙소</string>
    <string name="reviews_count">(후기 %d개)</string>
    <string name="price_per_day">%s / 박</string>
    <string name="total_price">총액 %s</string>
    <string name="super_host">슈퍼호스트</string>
    <string name="goto_map">map</string>
    <string name="price_range">%s - %s</string>
    <string name="resident_count">게스트 %d, 유아 %d</string>
    <string name="search_result_string">%s / %s - %s</string>
    <string name="google_map_custom_text_price_marker">₩%s</string>
</resources>