<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.airbnb.viewmodels.ResidentCountsViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.residents.ResidentsCountsFragment">

        <com.example.airbnb.ui.custom.CustomAppBar
            android:id="@+id/custom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:subtitle="@{@string/resident_count(viewModel.totalAdultCount, viewModel.totalBabyCount)}"
            app:titleText="인원 입력" />

        <com.example.airbnb.ui.custom.CustomResidentClickView
            android:id="@+id/cv_adult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bodyResident="@string/over_13years_old"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/custom_bar"
            app:titleResident="@string/adult"
            app:value="@{viewModel.adultCount}" />

        <com.example.airbnb.ui.custom.CustomResidentClickView
            android:id="@+id/cv_kids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bodyResident="@string/under_12year_old"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_adult"
            app:titleResident="@string/kids"
            app:value="@{viewModel.kidsCount}" />

        <com.example.airbnb.ui.custom.CustomResidentClickView
            android:id="@+id/cv_baby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bodyResident="@string/under_2year_old"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_kids"
            app:titleResident="@string/baby"
            app:value="@{viewModel.babyCount}" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>